# subby

./: .gitignore  CLAUDE.md  Model.md  PLAN.md  README.md  pyproject.toml  toy_felsenstein_pruning.py
.github/workflows/: docs.yml  test.yml
benchmarks/: Makefile  README.md  plot_benchmarks.R  report.tex  run_benchmarks.py
benchmarks/results/: wideboy.local.json
docs/: architecture.md  background.md  index.md  testing.md  tutorial.md
docs/api/: jax.md  model.md  oracle.md  rnaseq.md  wasm.md  webgpu.md
docs/assets/: style.css
examples/: conv_rate_prediction.py
references/: Holmes_Rubin_2002.tex
scripts/: batch_eigensub_maf.py  build_docs.py  generate_golden_tests.py  generate_hmm_json.py  test_carry_optimization.py
src/: README.md
src/data/: README.md  __init__.py  featurize.py  rnaseq.py  tokenizer.py
src/model/: .gitignore  README.md  hmm_decoder.json
subby/: README.md  __main__.py  formats.py  io.py  schema.json
subby/jax/: README.md  __init__.py  _utils.py  components.py  ctmc.py  diagonalize.py  eigensub.py  f81_fast.py  mixture.py  models.py  outside.py  presets.py  pruning.py  types.py  vjp.py
subby/oracle/: README.md  (+2 more)
subby/wasm/: Cargo.toml
subby/wasm/src/: branch_mask.rs  ctmc.rs  eigensub.rs  f81_fast.rs  formats.rs  lib.rs  mixture.rs  model.rs  pruning.rs
tests/: README.md  conftest.py  test_api.py  test_batch_eigensub.py  test_cli.py  test_components.py  test_eigensub.py  test_f81_fast.py  test_formats.py  test_formats_js.mjs  test_hky85.py  test_models_js.mjs  test_oracle.py  test_outside.py  test_padding.py  test_pruning.py
(+73 files in other folders)
