[package]
name = "phylo-wasm"
version = "0.1.0"
edition = "2021"
description = "Phylogenetic sufficient statistics library (WASM/native)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[profile.release]
opt-level = "s"
lto = true
